<resources>
    <string name="app_name">Bug Koops</string>

    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_report">Reports</string>
    <string name="title_activity_report_detail">Report details</string>
    <string name="title_activity_bugzilla_send">Send report to Bugzilla</string>

    <string name="scan">Scan</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="send">Send</string>

    <string name="action_options">Options</string>
    <string name="action_profiles">Profiles</string>
    <string name="action_reports">Reports</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="action_send_email">Email</string>
    <string name="action_send_share">Share</string>
    <string name="action_send_bugzilla">Bugzilla</string>

    <string name="about_description">Bug reporting application from encoded QR codes</string>
    <string name="about_credits">
        <b>Special credits goes to:</b>\n
            - <a href="https://github.com/zxing/zxing/">ZXing</a> and <a href="https://github.com/journeyapps/zxing-android-embedded">ZXing Android Embedded</a> for barcode decoding\n
            - Google for Android <a href="https://www.google.com/design/icons/">System icons</a>\n
        \n
        <b>Sponsored by</b> <a href="http://www.intel.com">Intel</a>\n
    </string>

    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_delete_reports_question">Are you sure you want to delete these reports?</string>
    <string name="dialog_delete_report_question">Are you sure you want to delete this report?</string>
    <string name="dialog_save_report_question">Are you sure you want to overwrite this report?</string>
    <string name="dialog_save_new_report_question">Are you sure you want to save this new report?</string>

    <string name="dialog_discard_report_change_question">You have modified this report. What do you want to happen to changes?</string>
    <string name="dialog_discard_report_new_question">This report have not been saved yet. What do you want to happen to changes?</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_neutral">Cancel</string>

    <string name="dialog_choose_share_title">Choose a sharing client:</string>
    <string name="dialog_choose_share_failed">There is no application installed able to share this report.</string>
    <string name="dialog_choose_email_title">Choose an email client:</string>
    <string name="dialog_choose_email_failed">There is no email client installed.</string>

    <string name="dialog_save_before_send">Do you want to save changes before sending?</string>

    <string name="toast_exit">Press Back again to Exit.</string>

    <string name="pref_category_scanner_label">Scanner</string>

    <string name="pref_invertcolors_label">Invert colors</string>
    <string name="pref_invertcolors_summaryoff">Black on white</string>
    <string name="pref_invertcolors_summaryon">White on black</string>
    <string name="pref_invertcolors_key" translatable="false">invertColors</string>
    <string name="pref_invertcolors_default" translatable="false">false</string>

    <string name="pref_metering_label">Metering</string>
    <string name="pref_metering_key" translatable="false">metering</string>
    <string name="pref_metering_default" translatable="false">false</string>

    <string name="pref_exposure_label">Exposure</string>
    <string name="pref_exposure_key" translatable="false">exposure</string>
    <string name="pref_exposure_default" translatable="false">false</string>

    <string name="pref_flashstate_label">Flash state</string>
    <string name="pref_flashstate_label_on">On</string>
    <string name="pref_flashstate_label_auto">Auto</string>
    <string name="pref_flashstate_label_off">Off</string>
    <string name="pref_flashstate_default" translatable="false">@string/pref_flashstate_off</string>
    <string name="pref_flashstate_key" translatable="false">flashState</string>
    <string name="pref_flashstate_off" translatable="false">off</string>
    <string name="pref_flashstate_auto" translatable="false">auto</string>
    <string name="pref_flashstate_on" translatable="false">on</string>

    <string name="pref_focusingmode_label">Focusing mode</string>
    <string name="pref_focusingmode_label_off">Off</string>
    <string name="pref_focusingmode_label_auto">Auto</string>
    <string name="pref_focusingmode_label_continuous">Continuous</string>
    <string name="pref_focusingmode_default" translatable="false">@string/pref_focusingmode_off</string>
    <string name="pref_focusingmode_key" translatable="false">focusingMode</string>
    <string name="pref_focusingmode_off" translatable="false">off</string>
    <string name="pref_focusingmode_auto" translatable="false">auto</string>
    <string name="pref_focusingmode_continuous" translatable="false">continuous</string>

    <string name="pref_cameraid_label">Camera</string>
    <string name="pref_cameraid_label_back">Back</string>
    <string name="pref_cameraid_label_front">Front</string>
    <string name="pref_cameraid_default" translatable="false">@string/pref_cameraid_back</string>
    <string name="pref_cameraid_key" translatable="false">cameraId</string>
    <string name="pref_cameraid_back" translatable="false">back</string>
    <string name="pref_cameraid_front" translatable="false">front</string>

    <string name="pref_fullscreen_label">Fullscreen</string>
    <string name="pref_fullscreen_summaryoff">Show status bar</string>
    <string name="pref_fullscreen_summaryon">Hide status bar</string>
    <string name="pref_fullscreen_key" translatable="false">fullscreen</string>
    <string name="pref_fullscreen_default" translatable="false">true</string>

    <string name="pref_resettodefault_label_title">Reset to default</string>
    <string name="pref_resettodefualt_label_summary">Reset all settings to their initial values.</string>
    <string name="pref_resettodefault_label_message">Revert all values to their defaults?</string>
    <string name="pref_resettodefault_label_negative">No</string>
    <string name="pref_resettodefault_label_positive">Yes</string>
    <string name="pref_resettodefault_key" translatable="false">resetToDefault</string>

    <string name="content_authority" translatable="false">com.intel.bugkoops</string>

    <string name="bugzilla_progress_task_unexpected_error">Unexpected error!</string>
    <string name="bugzilla_progress_task_login_checking_version">Checking server version &#8230;</string>
    <string name="bugzilla_progress_task_error_unsupported_server_api">Unsupported server API!</string>
    <string name="bugzilla_progress_task_login_word_found">Found</string>
    <string name="bugzilla_progress_task_login_word_version">version</string>
    <string name="bugzilla_progress_task_logging_in">Logging in &#8230;</string>
    <string name="bugzilla_progress_task_error_login">Failed to login!</string>
    <string name="bugzilla_progress_task_sending_report">Sending report &#8230;</string>
    <string name="bugzilla_progress_task_error_send_report">Failed to send report!</string>
    <string name="bugzilla_progress_task_sending_attachment">Sending attachment &#8230;</string>
    <string name="bugzilla_progress_task_error_send_attachment">Failed to send attachment!</string>
    <string name="bugzilla_progress_task_logging_out">Logging out &#8230;</string>
    <string name="bugzilla_progress_task_error_logout">Failed to logout!</string>
    <string name="bugzilla_progress_task_get_hierarchy">Getting product and components list &#8230;</string>
    <string name="bugzilla_progress_task_error_get_hierarchy">Failed to get product list</string>
    <string name="bugzilla_progress_task_get_fields">Getting bug fields list &#8230;</string>
    <string name="bugzilla_progress_task_error_get_fields">Failed to get bug fields</string>

    <string name="bugzilla_send_activity_success">Report successfuly sent!</string>
    <string name="bugzilla_send_activity_default_product">Please select a product &#8230;</string>
    <string name="bugzilla_send_activity_default_component">Please select a component &#8230;</string>
    <string name="bugzilla_send_activity_default_version">Please select a version &#8230;</string>
    <string name="bugzilla_send_activity_default_os">Please select an OS &#8230;</string>
    <string name="bugzilla_send_activity_default_platform">Please select a platform &#8230;</string>
    <string name="bugzilla_send_activity_default_priority">Please select bug priority &#8230;</string>
    <string name="bugzilla_send_activity_default_severity">Please select bug severity &#8230;</string>

    <string name="report_list_fragment_word_selected">Selected</string>

    <string name="utility_pretty_date_hour_ago">hour ago</string>
    <string name="utility_pretty_date_hours_ago">hours ago</string>
    <string name="utility_pretty_date_minute_ago">minute ago</string>
    <string name="utility_pretty_date_minutes_ago">minutes ago</string>
    <string name="utility_pretty_date_second_ago">second ago</string>
    <string name="utility_pretty_date_seconds_ago">seconds ago</string>
    <string name="utility_pretty_date_just_now">Just now</string>
    <string name="utility_pretty_date_yesterday_at">Yesterday at</string>

</resources>
