<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_report_detail_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_report_detail_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_report_detail_send"
        android:icon="@drawable/ic_action_send"
        android:title="@string/send"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/action_send_email"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_action_email"
                android:title="@string/action_send_email" />

            <item android:id="@+id/action_send_share"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_action_share"
                android:title="@string/action_send_share" />

            <item android:id="@+id/action_send_bugzilla"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_action_report"
                android:title="@string/action_send_bugzilla" />
        </menu>

    </item>

</menu>